// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single input 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-text"
  />
</form>
`;

exports[`should render buttons 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-any"
  />
  <button>
    foo
  </button>
  <button>
    bar
  </button>
</form>
`;

exports[`should render empty form 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-any"
  />
  Submit
</form>
`;

exports[`should render no button 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-any"
  />
</form>
`;

exports[`should render single all types 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-object"
  >
    
    <div
      className="transition-[height] overflow-hidden will-change-contents "
    >
      <div>
        <div
          className="pr-form-object__properties"
        >
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-text"
            >
              <label
                className="pr-form-text__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "string",
                  }
                }
                htmlFor="values.string"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-text"
            >
              <label
                className="pr-form-text__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "number",
                  }
                }
                htmlFor="values.number"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-boolean"
            >
              <label
                className="pr-form-boolean__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "boolean",
                  }
                }
                htmlFor="values.boolean"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-array"
            >
              <label
                className="pr-form-array__label pr-form-label"
                htmlFor="values.array"
              >
                Localized
              </label>
              <div
                className="pr-form-array__item "
              />
              <div
                className="pr-form-array__item-add"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-object"
            >
              <button
                className="pr-form-object__label pr-form-label pr-form-object__label--visible"
                onClick={[Function]}
                type="button"
              >
                <span>
                  object
                </span>
              </button>
              <div
                className="transition-[height] overflow-hidden will-change-contents "
              >
                <div>
                  <div
                    className="pr-form-object__properties"
                  >
                    <div
                      className="pr-form-field pr-form-additional-properties pr-form-additional-properties--free"
                    >
                      <div
                        className="flex flex-1 flex-col justify-between "
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-object"
            >
              <button
                className="pr-form-object__label pr-form-label pr-form-object__label--visible"
                onClick={[Function]}
                type="button"
              >
                <span>
                  objectWithAdditionalProperties
                </span>
              </button>
              <div
                className="transition-[height] overflow-hidden will-change-contents "
              >
                <div>
                  <div
                    className="pr-form-object__properties"
                  >
                    <div
                      className="pr-form-field pr-form-additional-properties"
                    >
                      Add a property
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`should set custom components 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div>
    Custom FieldText
  </div>
  Submit
</form>
`;

exports[`should set locales 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-text"
  />
  SUBMIT
</form>
`;

exports[`should use ui:widgets 1`] = `
<form
  className="pr-form "
  onSubmit={[Function]}
>
  <div
    className="pr-form-field pr-form-object"
  >
    
    <div
      className="transition-[height] overflow-hidden will-change-contents "
    >
      <div>
        <div
          className="pr-form-object__properties"
        >
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-array"
            >
              <label
                className="pr-form-array__label pr-form-label"
                htmlFor="values.array"
              >
                array
              </label>
              <div
                className="pr-form-array__item pr-form-array__item--as-row"
              />
              <div
                className="pr-form-array__item-add"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-upload"
            >
              <label
                className="pr-form-upload__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "upload",
                  }
                }
                htmlFor="values.upload"
              />
              <div
                className="pr-form-upload__input pr-form-input"
              >
                <div
                  className="pr-form-upload__placeholder"
                >
                  <div
                    className="pr-form-upload__preview"
                  />
                  Choose file
                </div>
                <input
                  accept="image/jpeg"
                  multiple={false}
                  onChange={[Function]}
                  type="file"
                />
                
              </div>
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-text pr-form-text--textarea"
            >
              <label
                className="pr-form-text__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "textarea",
                  }
                }
                htmlFor="values.textarea"
              />
              <div
                className="pr-form-text__input pr-form-input"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-select"
            >
              <label
                className="pr-form-select__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "select",
                  }
                }
                htmlFor="values.select"
              />
              Foo
              Bar
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-text"
            >
              <label
                className="pr-form-text__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "radio",
                  }
                }
                htmlFor="values.radio"
              />
            </div>
          </div>
          <div
            className="pr-form-object__property"
          >
            <div
              className="pr-form-field pr-form-date"
            >
              <label
                className="pr-form-date__label pr-form-label"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "date",
                  }
                }
                htmlFor="values.date"
              />
              <div
                className="pr-form-date__input pr-form-input"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  Submit
</form>
`;
